Moved portfolio descriptions into their own folder and fixed a word-wrapping issue within the descriptions.

--- a/src/Style.css
+++ b/src/Style.css
@@ -152,7 +152,7 @@ ul li a:hover {
 
 .portfolioDetails {
   display: inline-block;
-  width: 100%;
+  max-width: 100%;
   padding-top: 10px;
   text-align: left;
   padding-left: 4%;
